# serializer version: 1
# name: test_the_swarm_is_bioluminescent_at_night
  list([
    'texture=insect.png',
    'instances=5',
    'colors_enabled=True',
    'transforms_enabled=True',
    '[0] at=(120.000,240.000) rgba=(120, 255, 196, 255) scale=(1.400,1.400)',
    '[1] at=(128.500,236.000) rgba=(120, 255, 196, 255) scale=(1.400,1.400)',
    '[2] at=(140.000,250.250) rgba=(120, 255, 196, 255) scale=(1.400,1.400)',
    '[3] at=(400.000,300.000) rgba=(120, 255, 196, 210) scale=(0.800,0.800)',
    '[4] at=(410.750,290.500) rgba=(120, 255, 196, 210) scale=(0.800,0.800)',
  ])
# ---
# name: test_the_swarm_is_dull_brown_by_day
  list([
    'texture=insect.png',
    'instances=5',
    'colors_enabled=True',
    'transforms_enabled=True',
    '[0] at=(120.000,240.000) rgba=(126, 96, 62, 255) scale=(1.400,1.400)',
    '[1] at=(128.500,236.000) rgba=(126, 96, 62, 255) scale=(1.400,1.400)',
    '[2] at=(140.000,250.250) rgba=(126, 96, 62, 255) scale=(1.400,1.400)',
    '[3] at=(400.000,300.000) rgba=(126, 96, 62, 120) scale=(0.800,0.800)',
    '[4] at=(410.750,290.500) rgba=(126, 96, 62, 120) scale=(0.800,0.800)',
  ])
# ---
# name: test_the_swarm_is_mid_curve_at_dusk
  list([
    'texture=insect.png',
    'instances=5',
    'colors_enabled=True',
    'transforms_enabled=True',
    '[0] at=(120.000,240.000) rgba=(123, 176, 129, 255) scale=(1.400,1.400)',
    '[1] at=(128.500,236.000) rgba=(123, 176, 129, 255) scale=(1.400,1.400)',
    '[2] at=(140.000,250.250) rgba=(123, 176, 129, 255) scale=(1.400,1.400)',
    '[3] at=(400.000,300.000) rgba=(123, 176, 129, 165) scale=(0.800,0.800)',
    '[4] at=(410.750,290.500) rgba=(123, 176, 129, 165) scale=(0.800,0.800)',
  ])
# ---
